<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/antre_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="14dp"
            android:padding="12dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/company_photo"
                android:layout_width="107dp"
                android:layout_height="110dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                tools:src="@drawable/bank" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/company_photo"
                android:layout_toRightOf="@id/company_photo"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/company" />

                <TextView
                    android:id="@+id/company_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:layout_weight="1"
                    android:scrollHorizontally="false"
                    android:maxLines="20"
                    tools:text="@string/Address" />
            </LinearLayout>
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/pelayanan"/>
                <TextView
                    android:id="@+id/list_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:layout_weight="1"
                    android:scrollHorizontally="false"
                    android:maxLines="20"
                    android:text="@string/service_detail"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/petunjuk"/>
                <TextView
                    android:id="@+id/list_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:layout_weight="1"
                    android:maxLines="20"
                    android:scrollHorizontally="false"
                    android:text="@string/tips"/>
            </TableRow>

        </TableLayout>

        <FrameLayout
            android:layout_width="340dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/nomor_antrean_anda"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/queue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/queue"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="85dp"
                android:fontFamily="monospace"
                android:textSize="18sp"
                android:text="@string/time_queue" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="126dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time_queue_val"
                android:textColor="#006A04"
                android:textSize="24sp" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_accept_queue"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Ambil Antrean" />

            <Button
                android:id="@+id/btn_cancel_queue"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/holo_orange_light"
                android:text="Batalkan" />
        </FrameLayout>


    </LinearLayout>


</ScrollView>