<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUserActivity"
    android:background="@drawable/green_bg">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="318dp"
            android:layout_height="356dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/bg_abput" >

        </ImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:src="@drawable/profile1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="280dp"
            android:text="@string/name_about" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="310dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="340dp"
            android:text="@string/join_kelas"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </FrameLayout>
</LinearLayout>